# PresentationGenerator

./: .dockerignore  .env.example  .env.local.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  prettierrc.json  tailwind.config.js  test-db.js  tsconfig.json  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
ai-backend/: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
ai-services/: .dockerignore  .env.backup  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
ai-services/src/ai_services/: __init__.py  main.py
ai-services/src/ai_services/modules/: __init__.py
ai-services/src/ai_services/modules/image_generator/: __init__.py  tools.py
ai-services/src/ai_services/modules/image_generator/prompts/: image_generator_prompt.txt
ai-services/src/ai_services/modules/outline_generator/: tools.py
ai-services/src/ai_services/modules/outline_generator/prompts/: outline_prompt.txt
ai-services/src/ai_services/modules/slide_generator/: README.md  __init__.py  core.py  tools.py
ai-services/src/ai_services/utils/: __init__.py  error_handler.py
ai-services/tests/: conftest.py
ai-services/tests/api/: test_image_api.py
ai-services/tests/integration/: test_integration.py  test_supabase_upload.py
docs/: BRANCH_PROTECTION.md  CONTRIBUTING.md  ci-cd-auth-mocking.md  deployment.md  presentation-editor.md  (+2 more)
(+586 files in other folders)
