[tool.poetry]
name = "ai-services"
version = "0.1.0"
description = "AI Services for the Presentation Generator"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai_services", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.1"
openai = "^1.12.0"
httpx = "^0.27.0"
langchain-google-genai = "^2.1.2"
langchain-core = "^0.3.49"
langchain-chroma = "^0.1.1"
langchain-openai = "^0.3.12"
google-cloud-aiplatform = "^1.44.0"
google-cloud-storage = "^2.13.0"
vertexai = "^0.0.1"
supabase = "^2.3.4"
pillow = "^10.2.0"
together = "^0.2.10"
tiktoken = ">=0.7,<1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
start = "ai_services.main:start"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 